--- a/data/areas.json
+++ b/data/areas.json
@@ -19,6 +19,13 @@
         },
         "name": "Ramat Gan near the Diamond Stock Exchange"
     },
+    "Haifa": {
+        "coordinates": {
+            "lat": 32.763805,
+            "lng": 35.01590999999996
+        },
+        "name": "Near University of Haifa"
+    },
     "Herzeliya": {
         "coordinates": {
             "lat": 32.174202,
@@ -88,6 +95,12 @@
         "coordinates": {
             "lat": 31.9147078,
             "lng": 34.80677289999994
+        }
+    },
+    "Sarona": {
+        "coordinates": {
+            "lat": 32.0729618,
+            "lng": 34.78952609999999
         }
     },
     "Tefen": {
