add areas, coordinates and enforce both

--- a/data/areas.json
+++ b/data/areas.json
@@ -141,5 +141,11 @@
             "lat": 32.071168,
             "lng": 34.79208730000005
         }
+    },
+    "Yokneam": {
+        "coordinates": {
+            "lat": 32.658776,
+            "lng": 35.098613
+        }
     }
 }
