--- a/data/areas.json
+++ b/data/areas.json
@@ -168,6 +168,12 @@
             "lng": 34.78952609999999
         }
     },
+    "Sderot": {
+        "coordinates": {
+            "lat": 31.5316243,
+            "lng": 34.59098429
+        }
+    },
     "Tefen": {
         "coordinates": {
             "lat": 32.98029569999999,
