--- a/data/areas.json
+++ b/data/areas.json
@@ -187,6 +187,12 @@
             "lng": 34.79208730000005
         }
     },
+    "Tel Hai": {
+        "coordinates": {
+            "lat": 33.235777,
+            "lng": 35.583188000000064
+        }
+    },
     "Yokneam": {
         "coordinates": {
             "lat": 32.658776,
