--- a/data/areas.json
+++ b/data/areas.json
@@ -116,7 +116,7 @@
         },
         "name": "Tel Aviv"
     },
-    "Nazerath": {
+    "Nazareth": {
         "coordinates": {
             "lat": 32.682344,
             "lng": 35.29113899999993
