Other area to be used for unknown areas

--- a/data/areas.json
+++ b/data/areas.json
@@ -129,6 +129,7 @@
         },
         "name": "Omer Industrial Park"
     },
+    "Other": {},
     "Park Afek": {
         "coordinates": {
             "lat": 32.1075303,
