--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,11 +34,11 @@ jobs:
           python -V
           pip install -r requirements.txt
 
-          #- name: Run tests
-          #  run: |
-          #    - name: Run tests
-          #      run: |
-          #          pytest
+    - name: Run tests
+      run: |
+        - name: Run tests
+          run: |
+              pytest
 
     - name: Generate site
       run: |
