add more companies; switch to Herzliya

--- a/html/data/areas.json
+++ b/html/data/areas.json
@@ -52,12 +52,12 @@
         },
         "name": "Jerusalem"
     },
-    "Herzeliya": {
+    "Herzliya": {
         "coordinates": {
             "lat": 32.174202,
             "lng": 34.802932000000055
         },
-        "name": "Herzelia Pituach"
+        "name": "Herzliya Pituach"
     },
     "Hod HaSharon": {
         "coordinates": {
