remove some coordinates

--- a/html/data/c/appliedmaterials.json
+++ b/html/data/c/appliedmaterials.json
@@ -3,19 +3,11 @@
     "offices": [
         {
             "address": "9 Oppenheimer Street Rehovot, 076705 Israel",
-            "area": "Rehovot",
-            "coordinates": {
-                "lat": 31.9109496,
-                "lng": 34.807745599999976
-            }
+            "area": "Rehovot"
         },
         {
             "address": "Ashlegan 1 St. Kiryat Gat Israel",
-            "area": "Kiryat Gat",
-            "coordinates": {
-                "lat": 31.5924245,
-                "lng": 34.78088170000001
-            }
+            "area": "Kiryat Gat"
         }
     ],
     "url": "http://www.appliedmaterials.com/"
