--- a/html/data/c/appsflyer.json
+++ b/html/data/c/appsflyer.json
@@ -4,12 +4,7 @@
     "offices": [
         {
             "address": "14 Maskit St, Herzliya, 4673314",
-            "area": "Herzliya",
-            "coordinates": {
-                "lat": 32.164824,
-                "lng": 34.81138490000001
-            },
-            "phone": "+972-9-768-1949"
+            "area": "Herzliya"
         }
     ],
     "url": "http://appsflyer.com/"
